grammar.txt
program       -> statement* ;
statement     -> ( ( expression | if | come_from ) ";" )
              | comment ;
if            -> expr_body if_unless ;
if_unless     -> "unless" expression if_than? ;
if_than       -> "than" expr_body if_unless? ;
body          -> "{" statement* "}" ;
expr_body     -> expression | body;
comment       -> // identifier anything* ;
come_from     -> "come" "from" identifier ( "unless" expression )? ;

expression    -> exprif ;
exprif        -> equality ( "unless" equality "than" equality )+ ;
equality      -> comparison ( ( "!=" | "==" ) comparison )* ;
comparison    -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term          -> factor ( ( "-" | "+" ) factor )* ;
factor        -> unary ( ( "/" | "*" ) unary )* ;
unary         -> ( "!" | "-" ) unary | primary ;
primary       -> num+ | identifier | "true" | "false" | "none"
               | "(" expression ")" | call | assignment | string ;
call          -> identifier "(" expression ( "," expression )* ")"
               | identifier "()" ;
assignment    -> identifier "=" expression ;
string        -> """ anything* """

identifier    -> char ( char | num )* ;
char          -> [a-z] | [A-Z] | [\d] ;
num           -> [0-9] ;
